# redoxide

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml
.github/workflows/: docker.yml
docs/superpowers/plans/: 2026-05-28-redoxide.md
docs/superpowers/specs/: 2026-05-28-redoxide-design.md
src/: config.rs  docker.rs  main.rs  proxy.rs  state.rs  status.rs  version_cache.rs
src/protocol/: handshake.rs  mod.rs  packet.rs  varint.rs
