[package]
name = "redoxide"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "redoxide"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
bollard = "0.18"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
